--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mmm-transitapp",
-  "version": "1.0.0",
-  "description": "[Module description]",
-  "main": "MMM-Template.js",
+  "version": "0.1.0",
+  "description": "Check public transit times via Transit App",
+  "main": "MMM-TransitApp.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -10,17 +10,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+[GitHub url].git"
+    "url": "git+https://github.com/thariq-shanavas/MMM-TransitApp.git"
   },
   "keywords": [
     "template"
   ],
-  "author": "[Thariq]",
+  "author": "Thariq",
   "license": "MIT",
   "bugs": {
-    "url": "[GitHub url]/issues"
+    "url": "https://github.com/thariq-shanavas/MMM-TransitApp/issues"
   },
-  "homepage": "[GitHub url]#readme",
+  "homepage": "https://github.com/thariq-shanavas/MMM-TransitApp#readme",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^2.7.2",
