--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mmm-transitapp",
+  "name": "mmm-publictransit",
   "version": "0.1.0",
   "description": "Check public transit times via Transit App",
-  "main": "MMM-TransitApp.js",
+  "main": "MMM-PublicTransit.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thariq-shanavas/MMM-TransitApp.git"
+    "url": "git+https://github.com/thariq-shanavas/MMM-PublicTransit.git"
   },
   "keywords": [
     "template"
@@ -18,9 +18,9 @@
   "author": "Thariq",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thariq-shanavas/MMM-TransitApp/issues"
+    "url": "https://github.com/thariq-shanavas/MMM-PublicTransit/issues"
   },
-  "homepage": "https://github.com/thariq-shanavas/MMM-TransitApp#readme",
+  "homepage": "https://github.com/thariq-shanavas/MMM-PublicTransit#readme",
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^2.7.2",
